# delta-fit

./: README.md  pyproject.toml
deltafitlib/: HG.py  __init__.py  deltafitlib.py
test/: test_deltafitlib.py
