[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "deltafitlib"
author = "PStegmann"
author-email = "stegmann@ucar.edu"
home-page = "https://github.com/pstegmann/delta-fit"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python = ">=3.7"

